Stop entry meta times and links wrapping

--- a/source/wp-content/themes/wporg-developer-2023/src/style/style.scss
+++ b/source/wp-content/themes/wporg-developer-2023/src/style/style.scss
@@ -103,6 +103,11 @@ body[class] {
 			min-width: 100%;
 		}
 	}
+
+	time,
+	.external-link {
+		white-space: nowrap;
+	}
 }
 
 .wporg-hero-graphic {
